--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.19.2
+          go-version-file: go.mod
 
       - name: Install go dependencies
         run: go get -t -v ./...
@@ -43,7 +43,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.19.2
+          go-version-file: go.mod
 
       - name: Download go dependencies
         run: go get -t -v ./...
