--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.19.2
+          go-version-file: go.mod
 
       - run: go get -t -v ./...
       - run: go test -v -race ./...
@@ -53,7 +53,7 @@ jobs:
       
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.19.2
+          go-version-file: go.mod
 
       - name: Download go dependencies
         run: go get -t -v ./...
