--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,7 +20,7 @@ jobs:
       - run: go test -v -race ./...
 
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: test
     steps:
       - name: Create release
@@ -37,7 +37,7 @@ jobs:
       upload_url: ${{ steps.create.outputs.upload_url }}
 
   upload:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: release
     strategy:
       matrix:
